# airas-20251106-163904-matsuzawa

./: README.md  pyproject.toml
.github/workflows/: compile_latex_with_claude_code.yml  reuseable_claude_code.yml  run_evaluation_with_claude_code.yml  run_trial_experiment_with_claude_code_v2.yml
.research/: research_history.json
.research/iteration1/: stderr.txt  stdout.txt
.research/iteration1/comparative-1-roberta-base-110M--SST-2-GLUE/: metrics.json
.research/iteration1/comparison/: aggregated_metrics.json  significance_tests.json
.research/iteration1/proposed-roberta-base-110M--SST-2-GLUE/: metrics.json
.research/latex/iclr2024/: paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
.research/prompt/analytic_subgraph/: analytic_node.txt
.research/prompt/create_bibfile_subgraph/: filter_references.txt
.research/prompt/create_code_subgraph/: generate_experiment_code.txt  generate_run_config.txt  validate_experiment_code.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_design.txt
.research/prompt/create_hypothesis_subgraph/: evaluate_novelty_and_significance.txt  generate_hypothesis.txt
.research/prompt/generate_queries_subgraph/: generate_queries.txt
.research/prompt/html_subgraph/: convert_to_html.txt
.research/prompt/latex_subgraph/: convert_to_latex_str.txt
branches/main/: index.html
config/: config.yaml
config/runs/: comparative-1-roberta-base-110M--SST-2-GLUE.yaml  proposed-roberta-base-110M--SST-2-GLUE.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+1 files in other folders)
