[build-system]
requires = ["setuptools>=42", "wheel"]

[project]
name = "fw-lora-experiments"
version = "0.1.0"
description = "Research experiments for Fisher-Weighted LoRA"
authors = [{name = "Researcher", email = "research@example.com"}]

dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.16.1",
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "datasets>=2.14.5",
    "peft>=0.6.2",
    "optuna>=3.4.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.3",
    "scipy>=1.11.3",
]
